# gnome-timer

./: com.ermesonqueiroz.learning.json  meson.build
data/: com.ermesonqueiroz.learning.appdata.xml.in  com.ermesonqueiroz.learning.desktop.in  com.ermesonqueiroz.learning.gresource.xml  com.ermesonqueiroz.learning.gschema.xml  meson.build
data/css/: learning.css
data/icons/: meson.build
po/: POTFILES  meson.build
src/: learning-application.c  learning-application.h  learning-window.c  learning-window.h  learning-window.ui  learning.gresource.xml  main.c  meson.build
